--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         }
     ],
 
+    "require": {
+        "yiisoft/yii2": "2.0.*"
+    },
+
     "autoload": {
         "psr-4": {
             "xvs32x\\tinymce-responsivefilemanager\\": ""
